[package]
name = "stream_manager"
version = "0.1.0"
authors = ["Sam Stelfox <sstelfox@bedroomprogrammers.net>"]

[dependencies]
actix = "^0.5"
actix-web = { version = "^0.6", default-features = false }

dotenv = { version = "^0.13", default-features = false }
env_logger = "^0.5"
log = "^0.4"

serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
